# ubot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  архітектура.MD  опис.MD
.github/workflows/: ci.yml  git-ai.yaml
k8s/: README.md  deployment.yaml
scripts/: filter-workspace-pyproject.py  run-with-env.sh
